HEAD
	+ Removed 'learn from accounts spam folder' feature until serious
	  bug in dovecot-antispam Ubuntu package is fixed
	+ Add depend on dovecot-antispam previously on ebox-mail.
2.0.2
	+ Manage exception when ebox.amavisd-new is missing. It never
	  should be missing unless unfinished or wrong installation.
	  But at least now it doesn't crash the entire dashboard.
	+ Replaced lha uncompressor with rar and 7zip
	+ Set default order for dashboard widgets
2.0.1
	+ Fixed widget subsection titles
	+ Added commercial message
1.5.3
	+ Zentyal rebrand
1.5.2
	+ Added bridged mode support in firewall helper
1.5.1
	+ Bugfix: data for CC's SMTP report was not correctly formated
1.5
	+ Update configuration templates with the configuration files from lucid
	+ Bugfix: fixed training with uploaded files
	+ Bugfix: removed duplicates from spamassasin trusted_networks variable
1.4.2
	+ Bugfix: when no banned extensions are present p3scan/renattach
	  no longer blocks anything. Thanks to rsalgado to point this out
	+ Bugfix: regular expresion in file extensions matched too
	  much. Thanks to auerhaan for finding this bug
1.4.1
	+ Bugfix: Fix the report query for POP filtering
1.3.14
	+ Bugfix: Rename the report table names in code after changing in
	  database
1.3.13
	+ Removed addition of 127.0.0.1 to trusted networks, is already added
	by spamassassin
	+ Add dovecot-antispam plugin support
	+ Moved bayes database to postgres
	+ Added pyzor and dkim tests
1.3.12
	+ Add breadcrumbs
1.3.11
	+ Added report support
	+ Fixed bug when retrieving LDAP instance in master/slave
	  architecture
	+ Fixed bug we dont have duplicates entries in vdomain and global ACLs anymore
1.3.6
	+ adapted to changes in LDAP schemas managament
	+ Bugfix: adapted to changes in EBox::Ldap API
	+ Bugfix: banned extension regex broke, fixed with a simpler
	  expression
	+ Bugfix: only IP address are accepted now as external mail serves
	for amavis (amavis cannot use sost names for this)
1.1.30